Added lots of icons to drawable folder, Added AddPwdFragment with layout file Added first version of DatabaseHelper Added toolbar layout and include in activity_main and in fragment_add_pwd files Added sorting menu and save&cancel menu

--- a/app/src/main/res/layout/fragment_my_pwds.xml
+++ b/app/src/main/res/layout/fragment_my_pwds.xml
@@ -5,11 +5,17 @@
     android:layout_height="match_parent"
     tools:context=".MyPwdsFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="My Pwds"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"/>
+<ListView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+</ListView>
+
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:text="My Pwds"-->
+        <!--android:textSize="30sp"-->
+        <!--android:layout_centerInParent="true"/>-->
 
 </RelativeLayout>
