--- a/app/src/main/res/layout/fragment_add_pwd.xml
+++ b/app/src/main/res/layout/fragment_add_pwd.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".AddPwdFragment">
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar" />
+    <!--<include-->
+        <!--android:id="@+id/toolbar"-->
+        <!--layout="@layout/toolbar" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
