Added: - toolbar fragments titles - addPwd toolbar options - backstack Removed: - actionBar - drawer in addPwd

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,11 +5,22 @@
     android:layout_height="match_parent"
     tools:context=".SettingsFragment">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Settings"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"/>
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Settings"
+            android:textSize="30sp"
+            android:layout_centerInParent="true"/>
+
+
+
+    </LinearLayout>
+
+
 
 </RelativeLayout>
