--- a/app/src/main/res/layout/fragment_my_pwds.xml
+++ b/app/src/main/res/layout/fragment_my_pwds.xml
@@ -6,18 +6,23 @@
     tools:context=".MyPwdsFragment">
 
     <!--<include-->
-        <!--android:id="@+id/toolbar"-->
-        <!--layout="@layout/toolbar" />-->
+    <!--android:id="@+id/toolbar"-->
+    <!--layout="@layout/toolbar" />-->
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp">
+    <!--<ScrollView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
 
-    </ListView>
+        <ListView
+            android:id="@+id/lv_my_pwds"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp">
+
+        </ListView>
+    <!--</ScrollView>-->
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_add"
@@ -27,7 +32,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="@dimen/fab_margin"
-        android:src="@drawable/ic_add_white_24dp"/>
+        android:src="@drawable/ic_add_white_24dp" />
 
     <!--<TextView-->
     <!--android:layout_width="match_parent"-->
