--- a/app/src/main/res/layout/fragment_pwd_details.xml
+++ b/app/src/main/res/layout/fragment_pwd_details.xml
@@ -24,11 +24,11 @@
         android:background="#fff"
         android:drawableLeft="@drawable/ic_title_3a3a3a_24dp"
         android:drawablePadding="10dp"
-        android:paddingLeft="@dimen/fab_margin"
-        android:paddingRight="@dimen/fab_margin"
-        android:paddingBottom="@dimen/fab_margin"
+        android:padding="@dimen/fab_margin"
+        android:layout_marginBottom="0.3dp"
         android:text="tv_title"
-        android:textSize="27dp" />
+        android:textSize="20dp"
+        android:clickable="true" />
 
     <TextView
         android:id="@+id/tv_username"
@@ -37,11 +37,10 @@
         android:background="#fff"
         android:drawableLeft="@drawable/ic_person_3a3a3a_24dp"
         android:drawablePadding="10dp"
-        android:paddingLeft="@dimen/fab_margin"
-        android:paddingRight="@dimen/fab_margin"
-        android:paddingBottom="@dimen/fab_margin"
+        android:padding="@dimen/fab_margin"
+        android:layout_marginBottom="0.3dp"
         android:text="tv_username"
-        android:textSize="27dp" />
+        android:textSize="20dp" />
 
     <TextView
         android:id="@+id/tv_pwd"
@@ -50,11 +49,10 @@
         android:background="#fff"
         android:drawableLeft="@drawable/ic_vpn_key_3a3a3a_24dp"
         android:drawablePadding="10dp"
-        android:paddingLeft="@dimen/fab_margin"
-        android:paddingRight="@dimen/fab_margin"
-        android:paddingBottom="@dimen/fab_margin"
+        android:padding="@dimen/fab_margin"
+        android:layout_marginBottom="0.3dp"
         android:text="tv_pwd"
-        android:textSize="27dp" />
+        android:textSize="20dp" />
 
     <TextView
         android:id="@+id/tv_pwd2"
@@ -63,11 +61,10 @@
         android:background="#fff"
         android:drawableLeft="@drawable/ic_vpn_key_3a3a3a_24dp"
         android:drawablePadding="10dp"
-        android:paddingLeft="@dimen/fab_margin"
-        android:paddingRight="@dimen/fab_margin"
-        android:paddingBottom="@dimen/fab_margin"
+        android:padding="@dimen/fab_margin"
+        android:layout_marginBottom="0.3dp"
         android:text="tv_pwd2"
-        android:textSize="27dp" />
+        android:textSize="20dp" />
 
     <TextView
         android:id="@+id/tv_email"
@@ -76,11 +73,10 @@
         android:background="#fff"
         android:drawableLeft="@drawable/ic_email_3a3a3a_24dp"
         android:drawablePadding="10dp"
-        android:paddingLeft="@dimen/fab_margin"
-        android:paddingRight="@dimen/fab_margin"
-        android:paddingBottom="@dimen/fab_margin"
+        android:padding="@dimen/fab_margin"
+        android:layout_marginBottom="0.3dp"
         android:text="tv_email"
-        android:textSize="27dp" />
+        android:textSize="20dp" />
 
     <TextView
         android:id="@+id/tv_website"
@@ -89,11 +85,10 @@
         android:background="#fff"
         android:drawableLeft="@drawable/ic_web_3a3a3a_24dp"
         android:drawablePadding="10dp"
-        android:paddingLeft="@dimen/fab_margin"
-        android:paddingRight="@dimen/fab_margin"
-        android:paddingBottom="@dimen/fab_margin"
+        android:padding="@dimen/fab_margin"
+        android:layout_marginBottom="0.3dp"
         android:text="tv_website"
-        android:textSize="27dp" />
+        android:textSize="20dp" />
 
     <TextView
         android:id="@+id/tv_notes"
@@ -102,11 +97,10 @@
         android:background="#fff"
         android:drawableLeft="@drawable/ic_note_3a3a3a_24dp"
         android:drawablePadding="10dp"
-        android:paddingLeft="@dimen/fab_margin"
-        android:paddingRight="@dimen/fab_margin"
-        android:paddingBottom="@dimen/fab_margin"
+        android:padding="@dimen/fab_margin"
+        android:layout_marginBottom="0.3dp"
         android:text="tv_notes"
-        android:textSize="27dp" />
+        android:textSize="20dp" />
 
     <TextView
         android:id="@+id/tv_last_mod"
