--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -17,11 +17,39 @@
             android:layout_marginBottom="13dp"
             android:orientation="horizontal">
 
+            <Button
+                android:id="@+id/btn_changeMasterPwd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Change master password"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="13dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_changeMasterPwdHint"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Change master password hint"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="13dp"
+            android:orientation="horizontal">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Hola"
+                android:text="Block screenshots"
                 android:textSize="20dp" />
 
             <Switch
@@ -41,7 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Hola"
+                android:text="Auto lock"
                 android:textSize="20dp" />
 
             <Switch
